meja/tests/row-expression-fail.stderr
File "tests/row-expression-fail.meja", line 1, characters 32-34:
Error: Incompatible types ([<`A | `B | `C > `A] as 'a) and ([>`D] as 'b):
       Cannot unify ([<`A | `B | `C > `A] as 'a) and ([>`D] as 'b):
       the constructor `D is not present in both.
