meja/tests/row-expression-fail.meja
let x : [< `A | `B | `C > `A] = `D;
